# sysnsats

./: CMakeLists.txt  README.md  satmsysConfig.cmake  srp.md  sysnsatsConfig.cmake
doc/: doxy.conf
include/: attitude.hpp  attitude_stream.hpp  cryosat2.hpp  doris.hpp  doris_ground_segment.hpp  drag.hpp  jason1.hpp  jason2.hpp  jason3.hpp  macromodel.hpp  macromodel_surface_element.hpp  measured_attitude_data.hpp  occultation.hpp  quaternion_stream.hpp  satellite.hpp  satellite_core.hpp  satellite_macromodel_traits.hpp  satellite_payload.hpp  satellite_payload_traits.hpp  satellites.hpp  sentinel3a.hpp  sentinel3b.hpp  sentinel6a.hpp  spot4.hpp  srp.hpp  swot.hpp  vmeasured_attitude_data.hpp
include/core/: macromodel_surface_element.hpp  measured_attitude_data.hpp
include/satellites/: jason1.hpp  jason2.hpp  jason3.hpp  macromodel_core.hpp  satellites_core.hpp  sentinel3a.hpp  sentinel3b.hpp  sentinel6a.hpp
include/systems/: doris.hpp
src/doris/: CMakeLists.txt  obstypes.cpp
src/lib/: CMakeLists.txt  cnes_satellite_correction.cpp  conical_occultation.cpp  csatid.cpp  measured_attitude_data_factory.cpp  parse_dso_attitude_line.cpp  plate_solar_radiation_pressure.cpp  solar_radiation_pressure.cpp
test/unit_tests/: CMakeLists.txt  satid2satellite.cpp  test_jason1.cpp  test_jason1_measured_attitude.cpp  test_jason1_srp.cpp  test_jason2.cpp  test_jason2_measured_attitude.cpp  test_jason3.cpp  test_jason3_measured_attitude.cpp  test_load_satellite.cpp  test_parsing_mass_files.cpp  test_sentinel3a.cpp  test_sentinel3a_measured_attitude.cpp  test_sentinel3b_measured_attitude.cpp  test_sentinel6a_measured_attitude.cpp
